# SimpleGEP

./: README.md  pyproject.toml
scripts/: run_dp_sgd_sweep.sh  run_dp_sgd_trainer.sh  run_gep_sweep.sh  run_gep_trainer.sh
simplegep/: main.py  utils.py
simplegep/data/: cifar_loader.py
simplegep/dp/: dp_params.py  dp_sgd.py  dynamic_dp.py  grads_history.py  per_sample_grad.py  rdp_accountant.py  utils.py
simplegep/embeddings/: embedder.py  factory.py  kernel_pca_embedder.py  svd_embedder.py  utils.py
simplegep/models/: factory.py  resnet.py  tiny_cifar_net.py  utils.py
simplegep/sweepers/: sweep.py
simplegep/trainers/: dp_sgd_trainer.py  factory.py  gep_trainer.py  loss_function_factory.py  no_dp_trainer.py  optimizer_factory.py  rand_dp_sgd_trainer.py  super_trainer.py  utils.py
