[project]
name = "simplegep"
version = "0.1.0"
description = "A simple implementation of GEP variants."
authors = [
    {name = "moshebeutel",email = "moshebeutel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.20.1,<0.21.0)",
    "six (>=1.17.0,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "backpack-for-pytorch (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
