[tool.poetry]
name = "simplegep"
version = "0.1.0"
description = "A simple implementation of GEP variants."
authors = ["moshe <moshebeutel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18"
tqdm = "^4.66.4"
wandb = "^0.17.4"
backpack-for-pytorch = "^1.7.1"
six = "^1.17.0"
scipy = "^1.16.0"
scikit-learn = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
